fix: tooltip text align on w3cschool

--- a/src/content/inject.less
+++ b/src/content/inject.less
@@ -11,6 +11,8 @@
 
 	z-index: 99999;
 
+	text-align: left; // fix on w3cschool
+
 	.dictionaries-tooltip-content {
 		color: #fff;
 		font-size: 13px;
